[package]
name = "thrust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = ["Document", "Element", "HtmlElement", "HtmlDivElement", "Node", "Window", "HtmlCanvasElement", "CanvasRenderingContext2d"]
