[package]
name = "thrust"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.64"
log = "0.4.19"
specs = { version = "0.19.0", default-features = false, features = ["derive", "specs-derive"] }
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Node",
    "Window",
    "UiEvent",
]
